--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -10,14 +10,62 @@ html, body, .application {
   height: 100%;
 }
 
+.popup {
+  img {
+    height: 200px;
+    display: block;
+    margin-bottom: 1em;
+  }
+
+  time {
+    margin-top: -1em;
+    display: block;
+  }
+
+  h3 {
+    font-weight: normal;
+    color: #666;
+    font-size: 1em;
+  }
+
+  table {
+    border-spacing: 0;
+    border-collapse: collapse;
+  }
+
+  th, td {
+    margin: 2px 0;
+  }
+
+  th {
+    font-weight: 500;
+    padding-right: 0.5em;
+
+    &:after {
+      content: ':';
+    }
+  }
+}
+
+.operator {
+  border-top: 1px solid rgba(0, 0, 204, 0.13);
+  padding-top: 3px;
+  color: #00c;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
 .leaflet-control-layers-overlays {
 
   label {
     position: relative;
 
     > span {
-    	position: static;
-    	margin-left: 15px;
+      position: static;
+      margin-left: 15px;
 
       span {
         width: 10px;
