--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,4 +1,7 @@
-@import '_leaflet.scss';
+@import 'leaflet.label.css';
+@import '_MousePosition.scss';
+@import '_popups.scss';
+@import '_sidebar.scss';
 
 html, body, .application {
   height: 100%;
@@ -8,102 +11,4 @@ html, body, .application {
 
 .map {
   height: 100%;
-}
-
-.popup {
-  img {
-    height: 200px;
-    display: block;
-    margin-bottom: 1em;
-  }
-
-  time {
-    margin-top: -1em;
-    display: block;
-  }
-
-  h3 {
-    font-weight: normal;
-    color: #666;
-    font-size: 1em;
-  }
-
-  table {
-    border-spacing: 0;
-    border-collapse: collapse;
-  }
-
-  th, td {
-    margin: 2px 0;
-  }
-
-  th {
-    font-weight: 500;
-    padding-right: 0.5em;
-
-    &:after {
-      content: ':';
-    }
-  }
-}
-
-.operator {
-  border-top: 1px solid rgba(0, 0, 204, 0.13);
-  padding-top: 3px;
-  color: #00c;
-
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-}
-
-.leaflet-control-layers-overlays {
-
-  label {
-    position: relative;
-
-    > span {
-      position: static;
-      margin-left: 15px;
-
-      span {
-        width: 10px;
-        height: 17px;
-        background-position: 0px 2px;
-        background-repeat: no-repeat;
-        background-size: 10px 25px;
-        position: absolute;
-        margin-left: -15px;
-      }
-    }
-  }
-}
-
-.star-0000ff {
-  background-image: url('../img/pin-s-star+0000ff.png');
-}
-.star-00ff00 {
-  background-image: url('../img/pin-s-star+00ff00.png');
-}
-.star-00ffff {
-  background-image: url('../img/pin-s-star+00ffff.png');
-}
-.star-9900ff {
-  background-image: url('../img/pin-s-star+9900ff.png');
-}
-.star-cc00ff {
-  background-image: url('../img/pin-s-star+cc00ff.png');
-}
-.star-ff0000 {
-  background-image: url('../img/pin-s-star+ff0000.png');
-}
-.star-ff00ff {
-  background-image: url('../img/pin-s-star+ff00ff.png');
-}
-.star-ff9900 {
-  background-image: url('../img/pin-s-star+ff9900.png');
-}
-.star-ffff00 {
-  background-image: url('../img/pin-s-star+ffff00.png');
 }
