--- a/src/htdocs/css/_sidebar.scss
+++ b/src/htdocs/css/_sidebar.scss
@@ -1,3 +1,24 @@
+$sidebar-width: 200px;
+
+
+.leaflet-control-attribution {
+  max-width: $sidebar-width;
+  background: #eee !important;
+}
+
+.leaflet-top.leaflet-right {
+  height: 100%;
+  width: $sidebar-width;
+}
+
+.leaflet-control-layers {
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+  margin: 0 !important;
+  background: #eee;
+}
+
 /* icons in layer list */
 .leaflet-control-layers-overlays {
 
