use diff icon for checkins

--- a/src/htdocs/css/_sidebar.scss
+++ b/src/htdocs/css/_sidebar.scss
@@ -51,6 +51,9 @@ $sidebar-width: 200px;
   }
 }
 
+.embassy-999999 {
+  background-image: url('../img/pin-s-embassy+999999.png');
+}
 .star-0000ff {
   background-image: url('../img/pin-s-star+0000ff.png');
 }
